[Documentation] Adding section for JFR and JMC analysis